--- a/src/app/components/region-details/region-details.component.html
+++ b/src/app/components/region-details/region-details.component.html
@@ -47,12 +47,14 @@
         <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
             <ng-container matColumnDef="name">
               <mat-header-cell mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-              <mat-cell mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+              <mat-cell mat-cell *matCellDef="let element"> {{upperFirstLetter(element.name)}} </mat-cell>
             </ng-container>
           
             <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
             <mat-row matRipple *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-                    
+        <mat-paginator [length]="dataSource.data.length" [pageSizeOptions]="[5]" showFirstLastButtons
+            aria-label="Select page of items">
+        </mat-paginator>            
     </div>
 </div>
