--- a/src/app/components/region-details/region-details.component.css
+++ b/src/app/components/region-details/region-details.component.css
@@ -14,6 +14,7 @@
     width: 35%;
     background-color: whitesmoke;
     border-radius: 10px;
+    height: 100%;
 }
 
 .text {
@@ -60,6 +61,11 @@ mat-card-title {
     margin-bottom: 10px;
 }
 
+.break-line {
+    white-space: pre-line;
+    word-wrap: break-word;
+}
+
 @media (max-width: 950px) {
     .container {
         display: inline;
@@ -71,7 +77,7 @@ mat-card-title {
 
     .text {
         width: 100%;
-        padding: 0%;
+        padding: 1%;
         margin-left: 0px;
     }
 
