fix: adjustment json, modify to list of locations, adding id and introduction

--- a/src/app/components/region-details/region-details.component.html
+++ b/src/app/components/region-details/region-details.component.html
@@ -27,7 +27,7 @@
             <div class="section">
                 <mat-card-title>Introduction</mat-card-title>
                 <mat-divider></mat-divider>
-                <p>Red and Green</p>
+                <p [innerHTML]="location.introduction"></p>
             </div>
         </mat-card-content>
     </mat-card>
