feat: adding icon location

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     </button>
 
     <!-- Logo PokeApi -->
-    <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
+    <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Site icon"></a>
 
     <div class="selects">
       <span [ngClass]="{'selected': selectedSpan === 'home'}"><a mat-button routerLink="/home" matTooltip="Home"
@@ -74,7 +74,7 @@
       <a mat-list-item routerLink="/abilities"><img class="sidenav-icon" src="../../../assets/abilitie_icon.png" alt="Abilitie icon"> Abilities</a>
       <a mat-list-item routerLink="/natures"><img class="sidenav-icon" src="../../../assets/nature_icon.png" alt="Nature icon"> Natures</a>
       <a mat-list-item routerLink="/battle"><img class="sidenav-icon" src="../../../assets/battle_icon.png" alt="Battle icon"> Battle</a>
-      <a mat-list-item routerLink="/location"><img class="sidenav-icon" src="../../../assets/battle_icon.png" alt="Battle icon"> Location</a>
+      <a mat-list-item routerLink="/location"><img class="sidenav-icon" src="../../../assets/location_icon.png" alt="Location icon"> Location</a>
     </mat-nav-list>
   </mat-sidenav>
 </mat-drawer-container>
