fix: adjustment loading region

--- a/src/app/components/location/location.component.html
+++ b/src/app/components/location/location.component.html
@@ -5,7 +5,7 @@
         <mat-card-header>
           <mat-card-title>{{upperFirstLetter(location.name)}}</mat-card-title>
         </mat-card-header>
-        <img class="img" mat-card-image src="{{location.img}}" alt="Photo of a Shiba Inu">
+        <img class="img" mat-card-image src="{{location.img}}" alt="Image location">
     </mat-card>
   }
 </div>
