fix: onclick correction method

--- a/src/app/components/area-details/area-details.component.html
+++ b/src/app/components/area-details/area-details.component.html
@@ -1,45 +1,46 @@
 <div class="container">
-    <div class="areas-container">
-        <h2>Areas</h2>
-        <mat-card appearance="outlined">
-            <mat-card-header>
-                <mat-card-title> Australian Shepherd</mat-card-title>
-                <mat-card-subtitle>Herding group</mat-card-subtitle>
-            </mat-card-header>
-            <mat-card-actions>
-                <button mat-button>Learn More</button>
-            </mat-card-actions>
-        </mat-card>
-    </div>
+  <div class="areas-container">
+    <h2>Areas</h2>
+    @for(area of areas?.areas; track areas) {
+      <mat-card appearance="outlined">
+        <mat-card-header>
+          <mat-card-title> {{area.name}}</mat-card-title>
+        </mat-card-header>
+        <mat-card-actions>
+          <button mat-button>Show Pokemons</button>
+        </mat-card-actions>
+      </mat-card>
+    }
+  </div>
 
-    <h2>Pokémon found</h2>
-    <!-- Pokemons find locations -->
-    <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-          <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
-        </ng-container>
-      
-        <!-- Name Column -->
-        <ng-container matColumnDef="name">
-          <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
-        </ng-container>
-      
-        <!-- Weight Column -->
-        <ng-container matColumnDef="weight">
-          <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
-        </ng-container>
-      
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
-          <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
-        </ng-container>
-      
-        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-        <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-      </mat-table>
+  <h2>Pokémon found</h2>
+  <!-- Pokemons find locations -->
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <mat-header-cell *matHeaderCellDef> No. </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.position}} </mat-cell>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.name}} </mat-cell>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <mat-header-cell *matHeaderCellDef> Weight </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.weight}} </mat-cell>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <mat-header-cell *matHeaderCellDef> Symbol </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{element.symbol}} </mat-cell>
+    </ng-container>
+
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 </div>
