--- a/src/app/components/area-details/area-details.component.css
+++ b/src/app/components/area-details/area-details.component.css
@@ -1,20 +1,34 @@
 .container {
-    width: calc(95% - 5%);
-    margin: 2.5%;
+  width: calc(95% - 5%);
+  margin: 2.5%;
+}
+
+.areas-container {
+display: flex;
+align-items: start;  
+flex-wrap: wrap;
 }
 
 mat-card {
-    height: 150px;
-    width: 200px;
-    margin-bottom: 3%;
+  height: 150px;
+  width: 200px;
+  margin-bottom: 3%;
+  margin-right: 3%;
 }
 
 .mat-mdc-table {
-    width: 100%;
-    max-height: 500px;
-    overflow: auto;
+  width: 100%;
+  max-height: 500px;
+  overflow: auto;
+}
+
+.mat-column-name {
+  height: 100px;
+}
+
+@media(max-width: 750px) {
+  .areas-container {
+    align-items: center;
+    justify-content: center;  
   }
-  
-  .mat-column-name {
-    height: 100px;
-  }
+}
