fix: adjustment poke class and add icon for mat-table.

--- a/src/app/components/area-details/area-details.component.css
+++ b/src/app/components/area-details/area-details.component.css
@@ -78,7 +78,9 @@ mat-header-cell {
   color: green;
 }
 
-
+.poke-icon:hover {
+  animation: shake 0.5s ease-in-out;
+}
 
 mat-card:hover {
   color: #4c5fcc;
