feat: adding filter

--- a/src/app/components/area-details/area-details.component.css
+++ b/src/app/components/area-details/area-details.component.css
@@ -91,6 +91,10 @@ mat-card:hover {
   cursor: pointer;
 }
 
+mat-form-field {
+  width: 100%;
+}
+
 @keyframes shake {
   0% {
     transform: translateX(0);
